# apps/front/src/api/model/index.ts
@@ -40,6 +40,8 @@ export * from "./libraryType";
 export * from "./loginBody";
 export * from "./mediaAndWatchToken";
 export * from "./mediaDTO";
+export * from "./mediaWithStreams";
+export * from "./mediaWithStreamsStreamsItem";
 export * from "./playerSettings";
 export * from "./postAuthLogin201";
 export * from "./postPlayerEndParams";
@@ -57,8 +59,11 @@ export * from "./seasonWithEpisodesEpisodesItem";
 export * from "./seekPlayer";
 export * from "./showWithSeasons";
 export * from "./showWithSeasonsSeasonsItem";
+export * from "./startPlayerResponse";
+export * from "./startedPlayerInfos";
+export * from "./startedPlayerInfosMedia";
+export * from "./streamType";
 export * from "./typeMOVIESidstringnamestringoverviewstringnullmediaIdstringlibraryIdstring";
 export * from "./typeMOVIESidstringnamestringoverviewstringnullmediaIdstringlibraryIdstringType";
 export * from "./typeTVSHOWSidstringnamestringoverviewstringnulllibraryIdstring";
 export * from "./typeTVSHOWSidstringnamestringoverviewstringnulllibraryIdstringType";
-export * from "./startPlayerResponse";
