# apps/front/src/api/model/mediaWithStreams.ts
@@ -1,0 +1,16 @@
+/**
+ * Generated by otqs v1.0.0 🍺
+ * Do not edit manually.
+ * @beast/backend
+ * OpenAPI spec version: 0.0.1
+ */
+import type { MediaWithStreamsStreamsItem } from "./mediaWithStreamsStreamsItem";
+
+export interface MediaWithStreams {
+  createdAt: string;
+  duration: number;
+  id: string;
+  libraryId: string;
+  path: string;
+  streams: MediaWithStreamsStreamsItem[];
+}
