# apps/front/src/api/model/startedPlayerInfos.ts
@@ -1,0 +1,14 @@
+/**
+ * Generated by otqs v1.0.0 🍺
+ * Do not edit manually.
+ * @beast/backend
+ * OpenAPI spec version: 0.0.1
+ */
+import type { MediaWithStreams } from "./mediaWithStreams";
+import type { PlayerSettings } from "./playerSettings";
+
+export interface StartedPlayerInfos {
+  id: string;
+  media: MediaWithStreams;
+  settings: PlayerSettings;
+}
