# apps/front/src/api/model/startedPlayerInfosMedia.ts
@@ -1,0 +1,14 @@
+/**
+ * Generated by otqs v1.0.0 🍺
+ * Do not edit manually.
+ * @beast/backend
+ * OpenAPI spec version: 0.0.1
+ */
+
+export type StartedPlayerInfosMedia = {
+  createdAt: string;
+  duration: number;
+  id: string;
+  libraryId: string;
+  path: string;
+};
