# apps/front/src/api/model/streamType.ts
@@ -1,0 +1,16 @@
+/**
+ * Generated by otqs v1.0.0 🍺
+ * Do not edit manually.
+ * @beast/backend
+ * OpenAPI spec version: 0.0.1
+ */
+
+export type StreamType = (typeof StreamType)[keyof typeof StreamType];
+
+// eslint-disable-next-line @typescript-eslint/no-redeclare
+export const StreamType = {
+  video: "video",
+  audio: "audio",
+  subtitle: "subtitle",
+  attachment: "attachment",
+} as const;
